# sita

./: CMakeLists.txt  CMakeLists_oo1.txt  README.md  REDADME.md  main.cpp  test.prototxt
cmake/: Boost.cmake  CCoverage.cmake  Caffe.cmake  Cuda.cmake  CvBridge.cmake  Eigen.cmake  GTest.cmake  Glew.cmake  Glfw.cmake  Glog.cmake  Hdf5.cmake  HelperFunctions.cmake  Leveldb.cmake  LibOptions.cmake  Lmdb.cmake  Multibooster.cmake  OpenBLAS.cmake  OpenCV.cmake  OpenGL.cmake  Options.cmake  Packages.cmake  Protobuf.cmake  ROS.cmake  Xlog.cmake  Yaml.cmake  aarch64toolchain.cmake  wildmagic5.cmake
include/sita/: blocking_queue.h  context.h  graph.h  internal_thread.h  io_protobuff.h  macros.h  memory_control.h  operator.h  registry.h  tensor.h  types.h  workspace.h
include/sita/dataprovider/: data_provider.h  dataprovider.h  mnist_dataprovider.h
include/sita/dataprovider/dataset_util/: mnist.h
include/sita/dlflow/: graph.h  operator.h  registry.h
include/sita/dlflow/operators/: add_op.h  batch_norm.h  convolution.h  convolution_op.h  data_test_op.h  relu.h
include/sita/filler/: filler.h
include/sita/metric/: metric.h
include/sita/mlflow/: mlflow.h
include/sita/operators/: batch_norm.h  convolution.h  pooling.h  relu.h
include/sita/stuff/: common.h  context.h  graph.h  io_protobuff.h  macros.h  memcontrol.h  memory_control.h  operator.h  registry.h  sita_parameter.h  stuff.h  tensor.h  types.h  workspace.h
include/sita/stuff/operators/: add_op.h
include/sita/stuff/rng/: rng.h
include/sita/stuff/shuffle/: fisher_yates_shuffler.h
include/stba/stuff/: common.h  memcontrol.h  tensor.h
src/sita/: blocking_queue.cpp  context.cpp  graph.cpp  internal_thread.cpp  io_protobuff.cpp  memory_control.cpp  operator.cpp  tensor.cpp  workspace.cpp
src/sita/dataprovider/: dataprovider.cpp  mnist_dataprovider.cpp
src/sita/dataprovider/dataset_util/: mnist.cpp
src/sita/dlflow/: graph.cpp  operator.cpp
src/sita/dlflow/operators/: add_op.cpp  batch_norm.cpp  batch_norm.cu  convolution.cpp  convolution.cu  convolution_op.cpp  relu.cpp  relu.cu
src/sita/operators/: batch_norm.cpp  batch_norm.cu  convolution.cpp  convolution.cu  pooling.cpp  relu.cpp  relu.cu
src/sita/proto/: sita.h  sita.pb.cc  sita.pb.h  sita.proto  sita_operators.pb.cc  sita_operators.pb.h  sita_operators.proto  sita_utils.pb.cc  sita_utils.pb.h  sita_utils.proto
src/sita/protos/: sita.pb.cc  sita.pb.h  sita.proto
src/sita/stuff/: graph.cpp  io_protobuff.cpp  mem_control.cpp  memcontrol.cpp  memory_control.cpp  operator.cpp  tensor.cpp  workspace.cpp
src/sita/stuff/operators/: add_op.cpp  data_test_op.cpp
src/sita/stuff/shuffle/: fisher_yates_shuffler.cpp
src/stba/stuff/: memcontrol.cpp  tensor.cpp
tools/: main.cpp  sita.cpp
